--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -75,8 +75,8 @@
                 </div>
 
                 <div>
-                    <label for="input-location_phone_number">Phone Number: </label>
-                    <input type="number" name="input-location_phone_number" id="input-location_phone_number" maxlength="12">
+                    <label for="input-update-phone">Phone Number: </label>
+                    <input type="tel" name="input-location_phone_number" id="input-location_phone_number" placeholder="###-###-####" maxlength="10">
                 </div>
 
                 <input type="submit" value="Add Store">
@@ -106,11 +106,11 @@
                 </div>
                 <div>
                     <label for="input-update-city">City: </label>
-                    <input type="text" name="input-update-city" id="input-update-city">                    
+                    <input type="text" name="input-update-city" id="input-update-city" required="required">                    
                 </div>
                 <div>
                     <label for="input-update-state">State: </label>
-                    <input type="text" name="input-update-state" id="input-update-state">
+                    <input type="text" name="input-update-state" id="input-update-state" required="required">
                 </div>
 
                 <div>
@@ -120,7 +120,7 @@
 
                 <div>
                     <label for="input-update-phone">Phone Number: </label>
-                    <input type="number" name="input-update-phone" id="input-update-phone">
+                    <input type="tel" name="input-update-phone" id="input-update-phone" placeholder="###-###-####" maxlength='10' required="required">
                 </div>
 
                 
