--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,10 +1,3 @@
-{{!-- Movies Page --}}
-{{!-- Code Citations --}}
-{{!-- Date: 11/15/2022 --}}
-{{!-- Referenced structure and data-table from: --}}
-{{!-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
-
-
 <main>
 
 <h2>Movies</h2>
@@ -49,83 +42,94 @@
 </div>
 <div class = "row">
     <div class = "column">
-    <form id="search-movie-html">
-        <h3>Search For Movies</h3>
-        <div class= "form-inputs">
+        <form id="add-movie-form-ajax">
+            <h3>Add A New Movie</h3>
+            <div class = "form-inputs">
+                <div>
+                    <label for="input-movie_title">Movie Title: </label>
+                    <input type="text" name="input-title" id="input-title">
+                </div>
+
+                <div>
+                    <label for="input-release_date">Year of Release: </label>
+                    <input type="number" name="input-release_date" id="input-release_date" min="1900" max="2025">
+                </div>
+
+                <div>
+                    <label for="input-genre">Genre: </label>
+                    {{!-- <input type="text" name="input-genre" id="input-genre">                     --}}
+                    <select name="input-genre" id="input-genre">
+                        <option value="Action">Action</option>
+                        <option value="Comedy">Comedy</option>
+                        <option value="Drama">Drama</option>
+                        <option value="Horror">Horror</option>
+                        <option value="Sci-Fi">Sci-Fi</option>
+                        <option value="Thriller">Thriller</option>
+                    </select>
+                </div>  
+
+                <input type="Submit" value="Add Movie">
+            </div>
+        </form>
+        {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
+        <script src="./js/add_movie.js"></script>
+    </div> <!-- End of Add Location Column -->
+
+<div class = "column">
+        <form id="update-movie-form-ajax">
+        <h3>Update Movie</h3>
+            <div class = "form-inputs">
+                <div>
+                    <label for="update-order-id">Movie Title: </label>
+                    <select name="update-movie_title" id="movieSelect">
+                      <option value="update-order-id">Select a Movie</option>
+                        {{#each data}}
+                        <option value="{{this.movie_id}}">{{this.movie_title}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+
+                <div>
+                    <label for="update-movie">New Title: </label>
+                    <input type="text" name="update-movie" id="update-movie">                    
+                </div>
+                <div>
+                    <label for="input-release_date">Year of Release: </label>
+                    <input type="number" name="input-release_date" id="input-release_date-update" min="1900" max="2025">                    
+                </div>
+                
+                <div>
+                    <label for="input-genre">Genre: </label>
+                    <select name="input-genre" id="input-genre-update">
+                        <option value="Action">Action</option>
+                        <option value="Comedy">Comedy</option>
+                        <option value="Drama">Drama</option>
+                        <option value="Horror">Horror</option>
+                        <option value="Sci-Fi">Sci-Fi</option>
+                        <option value="Thriller">Thriller</option>
+                    </select>
+                </div>
+                
+                <input type="submit" value="Update">
+            </div>
+        </form>
+    <script src="./js/update_movie.js"></script>
+</div> <!-- End of update location Column -->
+
+</div> <!-- End of Row -->
+
+<div class = "row">
+    <div class = "column">
+    <form id="search-movie-html" method='GET' action='/movies'>
+        <h3>Search Movies By Title</h3>
+        <div class = "form-inputs">
             <div>
-                <label for="input-title">Search by Movie Title: </label>
+                <label for="input-title">Movie Title: </label>
                 <input type="text" name="movie_title" id="input-title-html-search">
             </div>
-            <input type="submit" value="Search Movies">
+            <input type="submit" value= "Search Movies">
             <a href='/movies'><button>Reset</button></a>
         </div>
     </form>
-    </div>
-
-
-{{!-- Form to add a record to the table  --}}
-    <div class = "column">
-        <form id="add-movie-form-ajax">
-            <h3>Add A New Movie:</h3>
-            <p><strong> Note: you may need to refresh the page to see the new items added. </strong></p>
-            <div>
-                <label for="input-movie_title">Movie Title: </label>
-            </div>
-            <div>
-                <input type="text" name="input-title" id="input-title">
-            </div>
-                <div>
-                <label for="input-release_date">Year of Release: </label>
-                </div>
-                <div>
-                <input type="number" name="input-release_date" id="input-release_date">
-                </div>
-                <div>
-                <label for="input-genre">Genre: </label>
-                <div>
-                <input type="text" name="input-genre" id="input-genre">
-                </div>
-            </div>
-            <input type="Submit" value="Add Movie">
-        </form>
-    <script src="./js/add_movie.js"></script>
-    </div>
-</div>
-
-<div class= "row">
-    <div class="column">
-        <form id="update-movie-form-ajax">
-        <h3>Update Movie</h3>
-        <div class= "form-inputs">
-            <div>
-                <label for="update-order-id">Movie Title: </label>
-                <select name="update-movie_title" id="movieSelect">
-                    <option value="update-order-id">Select a Movie</option>
-                    {{#each data}}
-                    <option value="{{this.movie_id}}">{{this.movie_title}}</option>
-                    {{/each}}
-                </select>
-            </div>
-            <div>
-                <label for="update-movie">Change Movie Title: </label>
-                <input type="text" name="update-movie" id="update-movie">
-            </div>
-            <div>
-                <label for="input-release_date">Year of Release: </label>
-                <input type="number" name="input-release_date" id="input-release_date-update">
-            </div>
-
-            <div>
-                <label for="input-genre">Genre: </label>
-                <input type="text" name="input-genre" id="input-genre-update">
-            </div>
-    
-            <input type="submit" value="Update">
-
-        </form>
-
-        <script src="./js/update_movie.js"></script>
-    </div>
-</div>
-
+</div> <!-- End of Search column -->
 </main>
