Deleted Search required field so reset works

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -181,7 +181,7 @@
         <div class = "form-inputs">
             <div>
                 <label for="input-lname">Last Name: </label>
-                <input type="text" name="lname" id="input-lname-html-search" required="required">
+                <input type="text" name="lname" id="input-lname-html-search" placeholder="Required">
             </div>
             <input type="submit" value= "Search Customer">
             <a href='/index'><button>Reset Results</button></a>
